# wowgm

./: .gitignore  CMakeLists.txt  README.md
dep/fmt/: CMakeLists.txt
dep/imgui/: CMakeLists.txt
dep/imgui/imgui/: imgui.cpp
dep/zlib/: CMakeLists.txt
src/extstd/: CMakeLists.txt
src/extstd/extstd/: extstd.hpp
src/extstd/extstd/containers/: concatenate.hpp  extract.hpp  flatten.hpp
src/extstd/extstd/literals/: memory.hpp
src/extstd/extstd/misc/: alignment.hpp  scoped_resource.hpp
src/extstd/extstd/threading/: join_all.hpp
src/extstd/extstd/traits/: function_traits.hpp
src/graphics/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.hpp  DescriptorPool.cpp  DescriptorSetLayout.cpp  DescriptorSetLayoutCache.cpp  Device.cpp  Helpers.hpp  Image.cpp  Image.hpp  ImageView.hpp  Instance.hpp  Mutator.hpp  NamedObject.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Queue.cpp  Queue.hpp  Reflection.cpp  Reflection.hpp  RenderPass.hpp  Shader.cpp  Spinlock.hpp  Swapchain.cpp  Swapchain.hpp  Traits.hpp  VEZ.hpp
src/graphics/graphics/: window.cpp  window.hpp
src/graphics/graphics/vulkan/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.hpp  Device.cpp  Device.hpp  ExpirableObject.hpp  Framebuffer.cpp  Framebuffer.hpp  Helpers.cpp  Helpers.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  Mutator.hpp  NamedObject.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  PipelineCache.cpp  PipelineCache.hpp  Queue.cpp  Queue.hpp  Reflection.cpp  Reflection.hpp  RenderPass.cpp  RenderPass.hpp  ResourceTracker.cpp  (+9 more)
src/shared/: CMakeLists.txt
src/shared/shared/: Defines.hpp
src/shared/shared/assert/: assert.cpp  assert.hpp
src/shared/shared/cryptography/: ARC4.cpp  ARC4.hpp  BigNumber.cpp  BigNumber.hpp  HmacHash.cpp  HmacHash.hpp  SHA1.cpp  SHA1.hpp
src/shared/shared/filesystem/: disk_file_system.cpp  disk_file_system.hpp  file_system.cpp  file_system.hpp  mpq_file_system.cpp  mpq_file_system.hpp
src/shared/shared/stacktrace/: stacktrace.hpp
src/shared/shared/threading/: MPSCQueue.hpp  ThreadPool.hpp  thread_pool.hpp
src/wowgm/: CMakeLists.txt  GameWindow.cpp  GameWindow.hpp  GameWindowDrawers.cpp  Presence.cpp  Presence.hpp  VkTraits.cpp  VkTraits.hpp  Window.cpp  Window.hpp  WowGM.cpp
src/wowgm/Cryptography/: ARC4.cpp  ARC4.hpp  AuthProof.hpp  BigNumber.cpp  BigNumber.hpp  HmacHash.cpp  HmacHash.hpp  PacketHeaders.cpp  PacketHeaders.hpp  Profiler.hpp  RealmList.hpp  SHA1.cpp  SHA1.hpp  Utilities.cpp  Utilities.hpp
src/wowgm/GLFW/: glfw.cpp  glfw.hpp
src/wowgm/Game/: WorldStateMgr.cpp  WorldStateMgr.hpp
src/wowgm/Game/DataStores/: DBC.cpp  DBC.hpp  DBCMeta.hpp  DBCStructures.hpp  DBStorage.cpp  DBStorage.hpp  DBTraits.hpp  ForeignKey.hpp  Meta.hpp
src/wowgm/Game/Entities/: CGContainer.cpp  CGContainer.hpp  CGItem.cpp  CGItem.hpp  CGObject.cpp  CGObject.hpp  CGPlayer.cpp  CGPlayer.hpp  CGUnit.cpp  CGUnit.hpp  Object.cpp  Object.hpp  ObjectMgr.cpp  ObjectMgr.hpp  UpdateField.hpp
src/wowgm/Game/Geometry/: ADT.cpp  ADT.hpp  Geometry.hpp  VolumeIntersections.hpp  WorldRenderer.cpp  WorldRenderer.hpp
src/wowgm/Game/Structures/: C3Vector.hpp  C4Quaternion.hpp  C4Vector.hpp  CAaBox.hpp  CArgb.hpp  ObjectGuid.cpp  (+4 more)
src/wowgm/Graphics/: ClientServices.cpp  ClientServices.hpp  Command.cpp  Command.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Device.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GUI.cpp  GUI.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  Interface.cpp  Interface.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  PipelineCache.hpp  Queue.cpp  Queue.hpp  RenderPass.cpp  RenderPass.hpp  Shader.cpp  Shader.hpp  SharedGraphicsDefines.cpp  SharedGraphicsDefines.hpp  Subpass.cpp  Subpass.hpp  Surface.cpp  Surface.hpp  (+8 more)
src/wowgm/Logging/: Logger.cpp  Logger.hpp
src/wowgm/Networking/: BaseSocket.hpp  ByteBuffer.cpp  ByteBuffer.hpp  ClientServices.cpp  ClientServices.hpp  MessageBuffer.hpp  Packet.hpp  Socket.hpp
src/wowgm/Protocol/: BaseSocket.hpp  ByteBuffer.cpp  ByteBuffer.hpp  ClientServices.cpp  ClientServices.hpp  MessageBuffer.hpp  Packet.hpp  PacketCrypt.cpp  PacketCrypt.hpp  Socket.hpp  WorldPacket.hpp
src/wowgm/Threading/: SocketManager.cpp  SocketManager.hpp  ThreadPool.hpp  Updatable.hpp  Updater.cpp  Updater.hpp
src/wowgm/Utilities/: Assert.cpp  Assert.hpp  Defines.hpp  Endianness.hpp  FileSystem.cpp  FileSystem.hpp  FourCC.hpp  MPSCQueue.hpp  ObjectGuid.cpp  ObjectGuid.hpp  PacketLogger.cpp  PacketLogger.hpp  Profiler.cpp  Profiler.hpp  SignalHandler.hpp  Utils.cpp  Utils.hpp
src/wowgm/VEZ/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorSetLayoutCache.hpp  Device.cpp  Device.hpp  Framebuffer.cpp  Framebuffer.hpp  Helpers.hpp  ImageView.cpp  Instance.cpp  Instance.hpp  MappedBuffer.cpp  MappedBuffer.hpp  Pipeline.cpp  Pipeline.hpp  PipelineCache.cpp  PipelineCache.hpp  Queue.cpp  Queue.hpp  Reflection.cpp  Reflection.hpp  RenderPass.hpp  Shader.hpp  Traits.hpp  VEZ.hpp
src/wowgm/Vulkan/: Allocation.hpp  Buffer.hpp  Camera.hpp  Common.cpp  Common.hpp  Compute.hpp  Context.cpp  Context.hpp  Debug.cpp  Debug.hpp  Frustrum.hpp  GUI.cpp  GUI.hpp  Model.cpp  Model.hpp  Offscreen.hpp  Pipelines.hpp  Shaders.cpp  Storage.cpp  Storage.hpp  Texture.hpp  UI.cpp  UI.hpp  Utils.cpp  Utils.hpp  VKS.cpp  VKS.hpp  VulkanBase.cpp  VulkanBase.hpp
src/wowgm/Windows/: InterfaceRenderer.cpp  InterfaceRenderer.hpp  MetricsRenderer.cpp  MetricsRenderer.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
src/wowgm/imgui/: imgui.cpp  imgui.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
(+128 files in other folders)
